fix(CountryList): changed gap size

--- a/src/components/CountryList/CountryList.module.css
+++ b/src/components/CountryList/CountryList.module.css
@@ -4,5 +4,5 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, 14em);
     justify-content: space-around;
-    gap: 5em 0.9em;
+    gap: 5em 5em;
   }
